--- a/css/style.css
+++ b/css/style.css
@@ -856,14 +856,14 @@ body {
 
 @media screen and (min-width: 768px) {
   .btn {
-    width: 15rem;
+    width: 13rem;
     padding: 0.375rem 1.75rem;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .btn {
-    width: 20rem;
+    width: 13rem;
     padding: 0.6rem 2rem;
   }
 }
@@ -1447,17 +1447,18 @@ body {
     line-height: 2rem;
   }
   .links .container .links-list ul li a {
-    font-size: 28px;
+    font-size: 1.5rem;
     text-decoration: none;
   }
   .links .container .divide {
     margin-top: 1rem;
-    margin-left: 50rem;
+    margin-left: 30rem;
   }
 }
 
 .home-header {
   overflow-x: hidden;
+  height: 50vh;
   position: relative;
 }
 
@@ -1531,8 +1532,24 @@ body {
 .home-header .container .moto {
   display: grid;
   place-items: center;
-  margin-top: 7rem;
-  margin-left: 1rem;
+  margin-top: 9rem;
+}
+
+.home-header .container .moto h4 {
+  margin: 0.5em;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 0.5rem;
+  color: #fff;
+  margin-bottom: -0.5rem;
+}
+
+.home-header .container .moto h5 {
+  margin: 0.5em;
+  letter-spacing: .2rem;
+  font-size: 0.5rem;
+  color: #fff;
+  margin-top: -0.5rem;
 }
 
 .home-header .container .moto h1 {
@@ -1541,10 +1558,39 @@ body {
   color: #fff;
 }
 
-.home-header .container .moto a {
-  margin-top: 2rem;
+.home-header .container .moto h1 span:before {
+  content: "Design";
+  font-weight: bold;
+  animation: animate 8s ease-in infinite;
+}
+
+@keyframes animate {
+  0% {
+    content: "Printing";
+  }
+  20% {
+    content: "Packaging";
+  }
+  40% {
+    content: "Branding";
+  }
+  60% {
+    content: "Graphics";
+  }
+  80% {
+    content: "Logo";
+  }
+}
+
+.home-header .container .moto .btn-flex {
+  display: flex;
+}
+
+.home-header .container .moto .btn-flex a {
+  margin-top: 1rem;
   margin-bottom: 1rem;
-  margin-left: 0rem;
+  margin-left: 1rem;
+  font-size: 0.6rem;
 }
 
 .show-nav {
@@ -1594,6 +1640,7 @@ body {
 
 .we-do .container .row .cont-desc p {
   color: gray;
+  font-size: 0.9rem;
   line-height: 1.5rem;
 }
 
@@ -1779,6 +1826,7 @@ body {
   background-size: cover;
   background-blend-mode: overlay;
   background-position: center center;
+  background-attachment: fixed;
   text-align: center;
 }
 
@@ -2014,14 +2062,19 @@ footer .footer-copyright .container div {
     width: 2.5rem;
   }
   .home-header .container .moto {
-    margin-top: 10rem;
     margin-left: 1rem;
+    margin-bottom: 1rem;
+  }
+  .home-header .container .moto h4 {
+    margin-bottom: -1rem;
+    font-size: 0.8rem;
+  }
+  .home-header .container .moto h5 {
+    margin-top: -1rem;
+    font-size: 0.8rem;
   }
   .home-header .container .moto h1 {
-    font-size: 2rem;
-  }
-  .home-header .container .moto h1 .big {
-    font-size: 3rem;
+    font-size: 2.4rem;
   }
   .we-do {
     margin-top: 5rem;
@@ -2181,6 +2234,14 @@ footer .footer-copyright .container div {
     margin-top: 13rem;
     margin-left: 0.6rem;
   }
+  .home-header .container .moto h4 {
+    font-size: 0.9rem;
+    margin-bottom: -1.5rem;
+  }
+  .home-header .container .moto h5 {
+    font-size: 0.9rem;
+    margin-top: -1.5rem;
+  }
   .home-header .container .moto h1 {
     font-size: 3rem;
   }
@@ -2188,10 +2249,10 @@ footer .footer-copyright .container div {
     font-size: 4rem;
   }
   .we-do {
-    margin-top: 5rem;
+    margin-top: 2rem;
   }
   .we-do .container {
-    margin-top: 5rem;
+    margin-top: 1rem;
   }
   .we-do .container .reverse {
     flex-direction: row;
@@ -2321,6 +2382,10 @@ footer .footer-copyright .container div {
 }
 
 @media screen and (min-width: 1200px) {
+  .home-header {
+    overflow: hidden;
+    height: 100vh;
+  }
   .home-header .container {
     width: 80%;
   }
@@ -2391,11 +2456,17 @@ footer .footer-copyright .container div {
     display: none;
   }
   .home-header .container .moto {
-    margin-top: 15rem;
+    margin-top: 20rem;
     margin-bottom: 15rem;
   }
+  .home-header .container .moto h4 {
+    letter-spacing: .4rem;
+  }
+  .home-header .container .moto h5 {
+    letter-spacing: 1rem;
+  }
   .home-header .container .moto h1 {
-    font-size: 3em;
+    font-size: 3.5em;
     margin: 0.5em;
   }
   .we-do .container {
@@ -2584,22 +2655,27 @@ footer .footer-copyright .container div {
     margin-top: 0.5rem;
     width: 10rem;
   }
-  .home-header .moto {
-    display: grid;
-    place-items: center;
-    margin-top: 35rem;
+  .home-header .container .moto {
+    margin-top: 15rem;
     margin-left: 1rem;
   }
-  .home-header .moto h1 {
-    font-size: 3rem;
+  .home-header .container .moto h4 {
+    margin-bottom: -2rem;
+    font-size: 1rem;
+    letter-spacing: .4rem;
+  }
+  .home-header .container .moto h5 {
+    letter-spacing: .8rem;
+    margin-top: -2rem;
+    font-size: 1rem;
+  }
+  .home-header .container .moto h1 {
+    font-size: 4.5rem;
     margin: 0.5em;
     color: #fff;
   }
-  .home-header .moto h1 .big {
-    font-size: 2rem;
-  }
-  .home-header .moto a {
-    margin-left: 0rem;
+  .home-header .container .moto a {
+    font-size: 1.5rem;
   }
   .we-do .container {
     margin-top: 8rem;
