--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,7 @@
 
 .home-header {
   overflow-x: hidden;
+  height: 50vh;
   // background: url(../Image/back.jpg) no-repeat;
   // background-size: cover;
   // background-blend-mode: overlay;
@@ -79,18 +80,61 @@
     .moto {
       display: grid;
       place-items: center;
-      margin-top: 7rem;
-      margin-left: 1rem;
+      margin-top: 9rem;
+
+      h4 {
+        margin: 0.5em;
+        font-style: italic;
+        font-weight: bold;
+        font-size: 0.5rem;
+        color: #fff;
+        margin-bottom: -0.5rem;
+      }
+      h5 {
+        margin: 0.5em;
+        letter-spacing: .2rem;
+        // font-style: italic;
+        font-size: 0.5rem;
+        color: #fff;
+        margin-top: -0.5rem;
+      }
       h1 {
         font-size: 1.5rem;
         margin: 0.5em;
         color: #fff;
+        span:before {
+          content: "Design";
+          font-weight: bold;
+          // color: $primary-color;
+          animation: animate 8s ease-in infinite;
+        }
+        @keyframes animate {
+          0% {
+            content: "Printing";
+          }
+          20% {
+            content: "Packaging";
+          }
+          40% {
+            content: "Branding";
+          }
+          60% {
+            content: "Graphics";
+          }
+          80% {
+            content: "Logo";
+          }
+        }
       }
-      a {
-        margin-top: 2rem;
-        margin-bottom: 1rem;
+      .btn-flex {
+        display: flex;
 
-        margin-left: 0rem;
+        a {
+          margin-top: 1rem;
+          margin-bottom: 1rem;
+          margin-left: 1rem;
+          font-size: 0.6rem;
+        }
       }
     }
   }
@@ -140,6 +184,7 @@
         }
         p {
           color: gray;
+          font-size: 0.9rem;
           line-height: 1.5rem;
         }
       }
@@ -185,7 +230,6 @@
       background-blend-mode: overlay;
       background-position: center center;
 
-   
       .offer1 {
         .offer-col {
           text-align: center;
@@ -194,8 +238,6 @@
           justify-content: center;
           align-items: center;
           .offer-image {
-          
-          
             width: 2rem;
             // margin-left: 8rem;
             margin-bottom: 1rem;
@@ -218,7 +260,6 @@
           }
         }
       }
-  
     }
   }
 }
@@ -334,6 +375,7 @@
   background-size: cover;
   background-blend-mode: overlay;
   background-position: center center;
+  background-attachment: fixed;
   text-align: center;
   .call-title {
     margin-top: 0.5rem;
@@ -369,14 +411,14 @@
       .client-logo2,
       .client-logo1 {
         img {
-        margin-bottom:1rem ;
+          margin-bottom: 1rem;
           width: 10rem;
         }
       }
       .client-logo4,
       .client-logo5 {
         img {
-          margin-bottom:1rem ;
+          margin-bottom: 1rem;
           width: 7rem;
         }
       }
@@ -570,13 +612,18 @@ footer {
         }
       }
       .moto {
-        margin-top: 10rem;
         margin-left: 1rem;
+        margin-bottom: 1rem;
+        h4 {
+          margin-bottom: -1rem;
+          font-size: 0.8rem;
+        }
+        h5 {
+          margin-top: -1rem;
+          font-size: 0.8rem;
+        }
         h1 {
-          font-size: 2rem;
-          .big {
-            font-size: 3rem;
-          }
+          font-size: 2.4rem;
         }
       }
     }
@@ -613,8 +660,6 @@ footer {
             }
           }
         }
-   
-   
       }
     }
   }
@@ -705,7 +750,6 @@ footer {
   .location {
     .map-responsive {
       gap: 0.5rem;
-
     }
   }
   footer {
@@ -789,6 +833,14 @@ footer {
       .moto {
         margin-top: 13rem;
         margin-left: 0.6rem;
+        h4 {
+          font-size: 0.9rem;
+          margin-bottom: -1.5rem;
+        }
+        h5 {
+          font-size: 0.9rem;
+          margin-top: -1.5rem;
+        }
         h1 {
           font-size: 3rem;
           .big {
@@ -799,9 +851,9 @@ footer {
     }
   }
   .we-do {
-    margin-top: 5rem;
+    margin-top: 2rem;
     .container {
-      margin-top: 5rem;
+      margin-top: 1rem;
       .reverse {
         flex-direction: row;
       }
@@ -826,7 +878,7 @@ footer {
           .offer-col {
             .offer-image {
               width: 3rem;
-            
+
               margin-bottom: 1.3rem;
             }
             .offer-desc {
@@ -841,7 +893,6 @@ footer {
             }
           }
         }
-     
       }
     }
   }
@@ -974,6 +1025,8 @@ footer {
 }
 @include responsive($xl) {
   .home-header {
+    overflow: hidden;
+    height: 100vh;
     .container {
       width: 100%-20%;
       img {
@@ -1047,11 +1100,18 @@ footer {
         }
       }
       .moto {
-        margin-top: 15rem;
+        margin-top: 20rem;
         margin-bottom: 15rem;
+        h4{
+          letter-spacing: .4rem;
+        }
+        h5{
+          letter-spacing: 1rem;
+      
+        }
 
         h1 {
-          font-size: 3em;
+          font-size: 3.5em;
           margin: 0.5em;
         }
       }
@@ -1105,7 +1165,7 @@ footer {
             text-align: center;
             .offer-image {
               width: 4rem;
-            
+
               margin-bottom: 2rem;
             }
             .offer-desc {
@@ -1118,8 +1178,6 @@ footer {
             }
           }
         }
-     
-     
       }
     }
   }
@@ -1300,24 +1358,33 @@ footer {
         margin-top: 0.5rem;
         width: 10rem;
       }
-    }
-    .moto {
-      display: grid;
-      place-items: center;
-      margin-top: 35rem;
-      margin-left: 1rem;
-      h1 {
-        font-size: 3rem;
-        margin: 0.5em;
-        color: #fff;
-        .big {
-          font-size: 2rem;
+      .moto {
+        margin-top: 15rem;
+        margin-left: 1rem;
+       
+  h4  {
+    margin-bottom: -2rem;
+    font-size: 1rem;
+    letter-spacing: .4rem;
+  }
+  h5 {
+    
+letter-spacing: .8rem;
+    margin-top: -2rem;
+    font-size: 1rem;
+  }
+        h1 {
+          font-size: 4.5rem;
+          margin: 0.5em;
+          color: #fff;
+        }
+        a {
+          font-size: 1.5rem;
         }
       }
-      a {
-        margin-left: 0rem;
-      }
     }
+    
+  
   }
   // .gallery {
   //   margin-top: 5rem;
@@ -1407,8 +1474,6 @@ footer {
             }
           }
         }
-   
-   
       }
     }
   }
