--- a/scss/style.scss
+++ b/scss/style.scss
@@ -92,7 +92,7 @@
       }
       h5 {
         margin: 0.5em;
-        letter-spacing: .2rem;
+        letter-spacing: 0.2rem;
         // font-style: italic;
         font-size: 0.5rem;
         color: #fff;
@@ -223,42 +223,13 @@
         font-weight: lighter;
       }
     }
+    .offer-links {
+      display: grid;
 
-    .offer-list {
-      background: url(../Image/offerbg.jpg) no-repeat;
-      background-size: 30rem;
-      background-blend-mode: overlay;
-      background-position: center center;
-
-      .offer1 {
-        .offer-col {
-          text-align: center;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          .offer-image {
-            width: 2rem;
-            // margin-left: 8rem;
-            margin-bottom: 1rem;
-          }
-          .offer-desc {
-            h2 {
-              color: $thrid-color;
-              font-weight: bold;
-
-              margin-bottom: 1rem;
-            }
-            p {
-              line-height: 1.5rem;
-              margin-bottom: 2rem;
-              color: gray;
-
-              margin-left: 1rem;
-              margin-right: 1rem;
-            }
-          }
-        }
+      gap: 2rem;
+      img {
+        width: 2rem;
+        margin-bottom: 1rem;
       }
     }
   }
@@ -380,7 +351,7 @@
   text-align: center;
   .call-title {
     margin-top: 2rem;
-    font-size: .8rem;
+    font-size: 0.8rem;
     padding: 10px;
     color: #fff;
   }
@@ -1105,14 +1076,14 @@ footer {
       .moto {
         margin-top: 20rem;
         margin-bottom: 15rem;
-        h4{
+        h4 {
           margin-bottom: -2rem;
-          letter-spacing: .2rem;
+          letter-spacing: 0.2rem;
           font-size: 1.2rem;
           font-weight: 900;
         }
-        h5{
-          letter-spacing: .8rem; 
+        h5 {
+          letter-spacing: 0.8rem;
         }
         h1 {
           font-size: 4.5em;
@@ -1366,18 +1337,17 @@ footer {
       .moto {
         margin-top: 15rem;
         margin-left: 1rem;
-       
-  h4  {
-    margin-bottom: -3rem;
-    font-size: 1.4rem;
-    letter-spacing: .4rem;
-  }
-  h5 {
-    
-letter-spacing: .8rem;
-    margin-top: -2rem;
-    font-size: 1rem;
-  }
+
+        h4 {
+          margin-bottom: -3rem;
+          font-size: 1.4rem;
+          letter-spacing: 0.4rem;
+        }
+        h5 {
+          letter-spacing: 0.8rem;
+          margin-top: -2rem;
+          font-size: 1rem;
+        }
         h1 {
           font-size: 4.5rem;
           margin: 0.5em;
@@ -1388,8 +1358,6 @@ letter-spacing: .8rem;
         }
       }
     }
-    
-  
   }
   // .gallery {
   //   margin-top: 5rem;
